--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.53MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-3.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-499.6KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇰🇷 韩国-1003.6KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.23MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.28MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 (已存活1天)日本-2.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇫🇷 法国-1.29MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇮🇳 印度-2.05MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-909.3KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇯🇵 日本-3.31MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-499.6KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-1.24MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-360.5KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-2.62MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-909.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-2.62MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-909.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-2.62MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-909.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-2.62MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-909.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-2.62MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-909.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-2.62MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-909.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-2.62MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-909.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
