--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-1003.6KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇯🇵 日本-1.91MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-360.5KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇩🇪 德国-1.04MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.15MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇸🇬 新加坡-2.27MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-683.9KB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
