--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-151.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.91MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇺🇸 美国-266.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 未知国家-683.9KB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.91MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.70MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇦🇺 澳大利亚-531.3KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-151.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1016.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-2.12MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1014.8KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 未知国家-683.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-531.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1014.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 未知国家-683.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-531.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1014.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 未知国家-683.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-531.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1014.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 未知国家-683.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-531.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1014.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 未知国家-683.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-531.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1014.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 未知国家-683.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-531.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1014.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-517.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 未知国家-683.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-531.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-151.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1014.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
